tests/negative/typecheck/function.orng
// function.orng:5:22: error: expected a value of type `Int`, got a value of type `Type`
// fn main()->Int {Int->Char}
//                     ^
// 
fn main()->Int {Int->Char}